--- a/webchat-backend/src/main/resources/templates/index.html
+++ b/webchat-backend/src/main/resources/templates/index.html
@@ -2,11 +2,10 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>Spring Boot WebSocket Chat Application</title>
+    <title>Support Chat</title>
     <link rel="stylesheet" href="/css/main.css" />
 </head>
 <body>
-<!--<a href="securedPage">Login</a>-->
 <noscript>
     <h2>Sorry! Your browser doesn't support Javascript</h2>
 </noscript>
@@ -28,7 +27,7 @@
 <div id="chat-page" class="hidden">
     <div class="chat-container">
         <div class="chat-header">
-            <h2>Spring WebSocket Chat Demo</h2>
+            <h2>Support Chat</h2>
         </div>
         <div class="connecting">
             Connecting...
